--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
+    "postinstall": "prisma generate",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate deploy"
@@ -19,6 +20,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "pg": "^8.18.0",
+    "prisma": "^6.19.2",
     "swagger-ui-express": "^5.0.1",
     "zod": "^4.3.6"
   },
@@ -27,7 +29,6 @@
     "@types/node": "^25.1.0",
     "@types/pg": "^8.16.0",
     "@types/swagger-ui-express": "^4.1.8",
-    "prisma": "^6.19.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
