--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,8 @@
     "baseUrl": "./",
     "paths": { "@/*": ["src/*"] },
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "."
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "api/**/*"],
   "exclude": ["node_modules", "**/*.test.ts"]
 }
