--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,10 @@
   "version": 2,
   "rewrites": [
     { "source": "/(.*)", "destination": "/api" }
-  ]
+  ],
+  "functions": {
+    "api/index.ts": {
+      "runtime": "@vercel/node@3"
+    }
+  }
 }
